--- a/style.css
+++ b/style.css
@@ -132,3 +132,185 @@ img {
   display: flex;
   flex-flow: wrap;
 }
+
+.blog .list .item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.blog .list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.blog .list .img {
+  margin-bottom: 12px;
+}
+
+.blog .list .title {
+  font-size: 15px;
+  line-height: 1.6;
+  font-weight: bold;
+}
+
+.blog .list .date {
+  font-size: 12px;
+  margin-top: 6px;
+}
+
+.btn {
+  display: block;
+  position: relative;
+  width: 220px;
+  font-size: 15px;
+  font-weight: bold;
+  color: #24a8bf;
+  line-height: 1;
+  text-align: center;
+  margin: 0 auto;
+  padding: 18px 0;
+  transition: opacity0.3s;
+  border: 1px solid #24a8bf;
+  border-radius: 3px;
+}
+
+.btn::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 1em;
+  width: 5px;
+  height: 9px;
+  transform: translateY(-50%);
+  background-image: url("./images/icon_arrow-right.png");
+  background-repeat: no-repeat;
+  background-size: 5px 9px;
+}
+
+.footer {
+  padding: 70px 0 30px;
+  background-color: #000;
+}
+
+.footer .logo {
+  width: 180px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.footer .copyright {
+  font-size: 12px;
+  letter-spacing: 0.05em;
+  color: #8b8b8b;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 15px;
+    line-height: 1.7;
+  }
+
+  .container {
+    padding: 0 20px;
+  }
+
+  .header {
+    padding: 30px 0;
+  }
+
+  .header .logo {
+    width: 172px;
+  }
+
+  .glabal-nav {
+    padding: 30px 0;
+  }
+
+  .glabal-nav ul li {
+    font-size: 16px;
+    margin-right: 50px;
+  }
+
+  .concept {
+    padding: 40px 0;
+  }
+
+  .concept .container {
+    flex-direction: column;
+  }
+
+  .concept .img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .concept .desc {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 20px;
+  }
+
+  .concept .subtitle {
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+
+  .concept .title {
+    font-size: 26px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+
+  .concept .text p {
+    font-size: 15px;
+    line-height: 1.8;
+  }
+
+  .blog .heading {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+
+  .blog .subtitle {
+    font-size: 12px;
+    margin-top: 10px;
+  }
+
+  .blog .list {
+    display: block;
+  }
+  .blog .list .item {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .blog .list .data {
+    margin-top: 2px;
+  }
+
+  .btn {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  .btn:hover {
+    opacity: 1;
+  }
+
+  .footer {
+    padding: 60px 0 20px;
+  }
+
+  .footer .logo {
+    width: 100px;
+    margin-bottom: 40px;
+  }
+
+  .footer .copyright {
+    font-size: 10px;
+  }
+
+}
